# typcraft

./: .envrc  .gitignore  ARCHITECTURE.md  Makefile  README.md  flake.nix
icon/: logo.typ
public/: index.html
src/: Main.elm  Ports.elm
wasm/: Cargo.toml
wasm/src/: lib.rs
